src/test/resources/invalid_tests/DuplicatedIONames.cnna
architecture DuplicatedIONames(inputs=10, classes=2){
    def input Q(-oo:+oo)^{inputs} in
    def input Q(-oo:+oo)^{inputs} in
    def output Q(0:1)^{classes} out

    def fc(){
        FullyConnected(units=64) ->
        Tanh()
    }

    in ->
    fc() ->
    FullyConnected(units=classes) ->
    Softmax() ->
    out
}